# aggregation_aligned_layer

./: Makefile  README.md
ark-groth16/: Cargo.toml
ark-groth16-verifier-script/src/: main.rs
ark-groth16-verifier/proving_data/: mimc_groth16.proof
ark-groth16-verifier/src/: main.rs
ark-groth16/src/: main.rs
ark_bn254_pairing_verifier/: Cargo.toml
ark_bn254_pairing_verifier/src/: main.rs
ark_bn254_pairing_verifier_script/: Cargo.toml
ark_bn254_pairing_verifier_script/src/: main.rs
ark_groth16_verifier/: .gitignore  Cargo.toml
ark_groth16_verifier/proving_data/: mimc_groth16.proof
ark_groth16_verifier/src/: main.rs
ark_groth16_verifier_script/src/: main.rs
ark_pairing_verifier/: Cargo.toml
ark_pairing_verifier/proving_data/: plonk_simple_mul.proof
ark_pairing_verifier/src/: main.rs
ark_pairing_verifier_script/: Cargo.toml
ark_pairing_verifier_script/src/: main.rs
lw_pairing_verifier/src/: main.rs
lw_pairing_verifier_script/: Cargo.toml
lw_pairing_verifier_script/src/: main.rs
lw_plonk_verifier_script/: .gitignore
lw_plonk_verifier_script/src/: main.rs
pairing_verifier/: Cargo.toml
pairing_verifier/src/: main.rs
pairing_verifier_arkworks/: Cargo.toml
pairing_verifier_script/src/: main.rs
program/: Cargo.toml
program/proving_data/: fibonacci_5.proof
program/src/: main.rs
risc0-fibonacci/host/: Cargo.toml  risc0_fibo.proof
risc0-fibonacci/host/src/: main.rs
risc0-fibonacci/methods/guest/: Cargo.toml
risc0-fibonacci/methods/guest/src/: main.rs
risc0_fibonacci_verifier/: Cargo.toml
risc0_fibonacci_verifier/src/: main.rs
risc0_fibonacci_verifier_script/: Cargo.toml
risc0_fibonacci_verifier_script/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
