[package]
name = "sp1-lambdaworks-plonk-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
bincode = "1.3.3"
ark-groth16 = "0.4.0"
ark-bls12-377 = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-serialize = "0.4.2"
ark-ff = "0.4.2"
